--- a/Working_with_strings_list.ipynb
+++ b/Working_with_strings_list.ipynb
@@ -935,43 +935,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "faaa9636",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = \"hello india\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d30270a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(b)    # one way is you can use len function"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b8a09979",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# other way to do the len function is --\n",
+    "count = 0\n",
+    "for i in b:\n",
+    "    count = count+1\n",
+    "print(count)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "298cbd36",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "i\n",
+      "n\n",
+      "d\n",
+      "i\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(b)):\n",
+    "    print(b[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e664d2c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "a\n",
+      "i\n",
+      "d\n",
+      "n\n",
+      "i\n",
+      " \n",
+      "o\n",
+      "l\n",
+      "l\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(b)):\n",
+    "    print(b[-i])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e664d2c9",
+   "id": "01d89854",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8e814c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "d\n",
+      "o\n",
+      "l\n",
+      "a\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"balodi\"\n",
+    "ch = len(s) -1\n",
+    "while ch>=0:\n",
+    "    print(s[ch])\n",
+    "    ch =ch-1"
+   ]
   }
  ],
  "metadata": {
