--- a/Working_with_strings_list.ipynb
+++ b/Working_with_strings_list.ipynb
@@ -1047,17 +1047,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01d89854",
+   "id": "92cac492",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "# to reverse the string by the help of while loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8e814c08",
+   "execution_count": 10,
+   "id": "5258096c",
    "metadata": {},
    "outputs": [
     {
@@ -1080,6 +1080,112 @@
     "    print(s[ch])\n",
     "    ch =ch-1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f7830b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try to check in following string vowles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a158f180",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v is not vowel\n",
+      "i is vowel\n",
+      "v is not vowel\n",
+      "e is vowel\n",
+      "k is not vowel\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"vivek\"\n",
+    "vowels = \"AaEeIiOoUu\"\n",
+    "for i in name:\n",
+    "    if i in vowels:\n",
+    "        print(\"{} is vowel\" .format(i) )\n",
+    "    else:\n",
+    "        print(\"{} is not vowel\" .format(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff4002a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#format ---> if you want to print some values at the runtime than format function is used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2c72830c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my name is vivek balodi'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"{} name is vivek balodi\" .format(\"my\")   # here i am using my at runtime of code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "75658647",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my name is vivek balodi'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"{} name {} vivek {}\" .format(\"my\", \"is\", \"balodi\")  #here is you want multiple entry at runtime of the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f18bddf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "476ee359",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
