--- a/Working_with_strings_list.ipynb
+++ b/Working_with_strings_list.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "298cbd36",
    "metadata": {},
    "outputs": [
@@ -996,23 +996,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "h\n",
-      "e\n",
-      "l\n",
-      "l\n",
-      "o\n",
-      " \n",
+      "b\n",
       "i\n",
-      "n\n",
       "d\n",
-      "i\n",
+      "o\n",
+      "l\n",
       "a\n"
      ]
     }
    ],
    "source": [
     "for i in range(len(b)):\n",
-    "    print(b[i])"
+    "    print(b[-i])"
    ]
   },
   {
@@ -1047,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92cac492",
+   "id": "f2cad1bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5258096c",
+   "id": "ba53e9fd",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f7830b",
+   "id": "faa6b594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,19 +1088,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a158f180",
+   "execution_count": 30,
+   "id": "fdb0c89b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v is not vowel\n",
-      "i is vowel\n",
-      "v is not vowel\n",
-      "e is vowel\n",
-      "k is not vowel\n"
+      "v is not a vowel\n",
+      "i is a vowel\n",
+      "v is not a vowel\n",
+      "e is a vowel\n",
+      "k is not a vowel\n"
      ]
     }
    ],
@@ -1114,15 +1109,15 @@
     "vowels = \"AaEeIiOoUu\"\n",
     "for i in name:\n",
     "    if i in vowels:\n",
-    "        print(\"{} is vowel\" .format(i) )\n",
+    "        print(\"{} is a vowel\" .format(i) )\n",
     "    else:\n",
-    "        print(\"{} is not vowel\" .format(i))"
+    "        print(\"{} is not a vowel\" .format(i))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff4002a3",
+   "id": "fb4d6736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2c72830c",
+   "id": "15d08d19",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "75658647",
+   "id": "2c8fc201",
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1169,178 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f18bddf",
+   "id": "5872ec7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can also ask to user for input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3e546a93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vivek\n",
+      "balodi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'my name is vivek balodi'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "b = input()\n",
+    "\"my name is {} {}\" .format(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24458cab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it will give you en error if you are using 3 filler but only using two input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9a9db98b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "Replacement index 2 out of range for positional args tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\VIVEKB~1\\AppData\\Local\\Temp/ipykernel_29000/3766976914.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;34m\"my name is {} {} {}\"\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: Replacement index 2 out of range for positional args tuple"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "b = input()\n",
+    "\"my name is {} {} {}\" .format(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8483df13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vivek\n",
+      "balodi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'my name is vivek balodi pandit'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "b = input()\n",
+    "\"my name is {} {} {}\" .format(a,b, \"pandit\")  #3rd variable hardcode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c320e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## question if you want to check string is pelindrom or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6c6899c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a string to check pelindrom = nitin\n",
+      "this is pelindrom\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"enter a string to check pelindrom = \")\n",
+    "s1 = s[::-1]\n",
+    "if s ==s1:\n",
+    "    print(\"this is pelindrom\")\n",
+    "else:\n",
+    "    print(\"this is not pelindrom\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "31ee60f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a string to check pelindrom = hello\n",
+      "this is not the same\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = input(\"enter a string to check pelindrom = \") \n",
+    "if b == b[::-1]:\n",
+    "    print(\"this is the same\")\n",
+    "else:\n",
+    "    print(\"this is not the same\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50e0deef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1182,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476ee359",
+   "id": "8944cddb",
    "metadata": {},
    "outputs": [],
    "source": []
