--- a/Working_with_functions.ipynb
+++ b/Working_with_functions.ipynb
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b8e55e25",
    "metadata": {},
    "outputs": [],
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0d9e6f45",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
        "[132, 324, 125, 5321, 2, 12, 32, 4]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1a4fd473",
+   "id": "ea7d838e",
    "metadata": {},
    "outputs": [
     {
@@ -863,8 +863,331 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "9764bdcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In kwargs we use to give data in pair of key and value, but internal it store data in dictionary format"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b0f4ecc8",
+   "id": "4add48ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## data yo can give anything like list, boolen, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a8929821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': ['balodi', 'vivek', 12], 'b': True, 'c': 13123, 'd': 'hello'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test13(a=[\"balodi\",\"vivek\",12], b=True, c= 13123, d = \"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e1eb2f64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Notes -- args return tuple , kwargs return dictionary"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "b61883fe",
+   "metadata": {},
+   "source": [
+    "#\n",
+    "\n",
+    "1 - create a function 1-\n",
+    "\tyou are suppose to allow, number of mixed data and try to create a list of seperate data \n",
+    "based on data type and return multiple result\n",
+    "\n",
+    "2) create a function which will be able to use *args and **kwargs and it\n",
+    "will be able to do all list values concatination and return a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3b1a4ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vivek(*args):\n",
+    "    for i in args:\n",
+    "        if type(i) == list:\n",
+    "            print(i)\n",
+    "        elif type(i) == tuple:\n",
+    "            print(i)\n",
+    "        elif type(i)== set:\n",
+    "            print(type(i), i)\n",
+    "        elif type(i) == dict:\n",
+    "            print(type(i), i)\n",
+    "        pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9ae54703",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[123, 'vivek', 'balodi']\n",
+      "(12, 32, 4, 345)\n",
+      "<class 'set'> {2424, 123, 523}\n",
+      "<class 'dict'> {45: 121, 13: 1313, 24: 132}\n"
+     ]
+    }
+   ],
+   "source": [
+    "vivek(12342,[123,\"vivek\", \"balodi\"], (12,32,4,345,), {123,2424,523}, {45:121,13:1313,24:132})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "609dc99c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func2(*args, **kwargs):\n",
+    "    a = [i for i in args if type(i)== list]\n",
+    "    b = [i[1] for i in kwargs.items() if type(i[1]) == list]\n",
+    "    return a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "996e1030",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([[12, 31, 4, 12, 24, 132], [1234512, 65146]], [])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func2([12,31,4,12,24,132], 23,13,24,[1234512,65146,], a = \"asdgasdg\", b= \"ahsdsa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "446aed0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func3(**kwargs):\n",
+    "    for i in kwargs.items():\n",
+    "        if type(i[1]) == list:\n",
+    "            if \"vivek\" in i[1]:\n",
+    "                print(\"I am able to find your name\")\n",
+    "                print(i[1])\n",
+    "    return(kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "043e5816",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am able to find your name\n",
+      "['vivek', 'balodi', 12, 134, 34]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'a': [12, 24, 453, 35],\n",
+       " 'b': ['vivek', 'balodi', 12, 134, 34],\n",
+       " 'c': ['hello', 212, 23, 5, 453]}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func3(a=[12,24,453,35,], b=[\"vivek\", \"balodi\", 12,134,34], c= [\"hello\", 212,23,5,453])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "15104a86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "28f95183",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_9344/3370615315.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\VIVEKB~1\\AppData\\Local\\Temp/ipykernel_9344/3370615315.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    m = i*2:\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in l:\n",
+    "    m = i*2:\n",
+    "        print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d4e87146",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "double_number = [2*n for n in l]\n",
+    "print(double_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d02a73e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "4c0e3036",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'type' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\VIVEKB~1\\AppData\\Local\\Temp/ipykernel_9344/2662169362.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'type' object is not iterable"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f56b8423",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vivek2(* args):\n",
+    "    dt= {}\n",
+    "    for i in args:\n",
+    "        if type(i) in dt:\n",
+    "            dt[type(i)].append(i)\n",
+    "        else:\n",
+    "            dt[type(i)] = [i]\n",
+    "    return dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "742466b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{int: [1233, 23453245],\n",
+       " list: [[34234523], [23452345, 345234523]],\n",
+       " complex: [(6+7j)]}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vivek2(1233,[34234523],23453245,[23452345,345234523], 6+7j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3518c64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5338ce3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f60ebed1",
    "metadata": {},
    "outputs": [],
    "source": []
